# fastapi-bbs

./: .gitignore  Dockerfile  README.md  database.py  entrypoint.sh  models.py  pyproject.toml  run.sh
app/: main.py
app/domain/answer/: answer_crud.py  answer_router.py  answer_schema.py
app/domain/question/: question_crud.py  question_router.py  question_schema.py
app/domain/user/: user_crud.py  user_router.py
docs/: 2.Database.md  Setup.md
frontend/: index.html
frontend/src/: App.svelte  main.js
frontend/src/components/: Navigation.svelte
frontend/src/lib/: api.js
frontend/src/routes/: AnswerModify.svelte  Detail.svelte  Home.svelte  QuestionCreate.svelte  QuestionModify.svelte  UserCreate.svelte  UserLogin.svelte
migrations/: env.py
migrations/versions/: efe30d756111_.py
