[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["minarae <minarae@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.97.0"
sqlalchemy = "^2.0.16"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pymysql = "^1.0.3"
alembic = "^1.11.1"
pydantic = {extras = ["email"], version = "^1.10.9"}
python-multipart = "^0.0.6"
aiomysql = "^0.2.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
